Updated to OpenJDK-22