@@ -37,7 +37,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>${commandLineArg.ChooseVM} ${commandLineArg.NativeProvider} --enable-preview </argLine>
+                    <argLine>${commandLineArg.ChooseVM} ${commandLineArg.NativeProvider}</argLine>
                 </configuration>
             </plugin>
         </plugins>
